laaws-configservice version 2.9.0
Squashed commit of the following:

commit 13c63132cfb921e2f844f0d54ecc4072040646e2
Author: Daniel Vargas <dlvargas@stanford.edu>
Date:   Wed Jul 24 20:04:48 2024 -0700

    Begin 2.9.0 release

commit 372e7bf7f523ce302d7716bd5f8e4e71234ac3c6
Author: Claire Griffin <clairetg@stanford.edu>
Date:   Fri Jun 21 13:17:26 2024 -0700

    Readd the title to the Readme file

commit b63ac00c60ee0a81ac7702b9a008558f4e6061b0
Author: Claire Griffin <clairetg@stanford.edu>
Date:   Fri Jun 21 13:13:37 2024 -0700

    Remove leftover travis.ci support

commit 6ea459a5f8cbd346bfc78ed4d9416537b90bce3b
Author: Tom Lipkis <tal@pss.com>
Date:   Thu Apr 18 21:07:03 2024 -0700

    Include message in error response

commit 3bcb75bfea0a39c1c1d455f198c4168d258b78f8
Author: Tom Lipkis <tal@pss.com>
Date:   Thu Apr 18 21:05:59 2024 -0700

    Add mogration config section

commit 2cdaffb18fd203b70f64d3d6175935b545af0b69
Author: dlvargas <dlvargas@stanford.edu>
Date:   Wed Mar 20 16:48:43 2024 -0700

    Made the test / configuration class explicit to suppress extraneous messages in tests

commit 4d8854e809e73fe8d1f48d9f0a4aa9b9eef7158c
Merge: da34666 e764432
Author: Daniel Vargas <dlvargas@stanford.edu>
Date:   Wed Mar 13 19:29:24 2024 -0700

    Merge branch 'develop' into feature-jdk17

commit e7644327ac978dbc698a98ea7a715fbaac62c113
Author: Tom Lipkis <tal@pss.com>
Date:   Tue Mar 12 16:46:52 2024 -0700

    Add TAGS

commit da34666617d8566f4460c485ba9067b6d837dca9
Merge: e38bb30 6a3ce8f
Author: dlvargas <dlvargas@stanford.edu>
Date:   Thu Feb 29 21:51:35 2024 -0800

    Merge branch 'develop' into feature-jdk17

commit 6a3ce8f3c9de87c903035f96a63357d62d128e20
Author: Claire Griffin <clairetg@stanford.edu>
Date:   Thu Feb 29 18:59:52 2024 -0800

    Squashed commit of the following:

    commit d1b96a86fd1583c8f3eec01b1f6e6324974de842
    Merge: 8f33591 873176e
    Author: Claire Griffin <clairetg@stanford.edu>
    Date:   Thu Feb 29 18:52:20 2024 -0800

  